# Afyabuddy-backend

./: pyproject.toml  requirements.txt
src/afyabuddy/: api.py  api_server.py  crew.py  main.py  requirements.txt
src/afyabuddy/config/: agents.yaml  tasks.yaml
