[project]
name = "afyabuddy"
version = "0.1.0"
description = "AfyaBuddy using crewAI"
authors = [{ name = "Abigail Wagura", email = "abigailwagura@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
afyabuddy = "backend.afyabuddy.main:run"
run_crew = "backend.afyabuddy.main:run"
train = "backend.afyabuddy.main:train"
replay = "backend.afyabuddy.main:replay"
test = "backend.afyabuddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
entrypoint = "src.crew"